Fix all compilation errors and address code review feedback
Agent-Logs-Url: https://github.com/Open-J-Proxy/ojp/sessions/9607815b-9bd1-4ade-8508-3f4662841502

Co-authored-by: rrobetti <7221783+rrobetti@users.noreply.github.com>